--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,4 +41,4 @@ spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 # Logging Setting
 logging.level.org.hibernate=info
 
-
+spring.jpa.open-in-view=false
